--- a/eulero/pom.xml
+++ b/eulero/pom.xml
@@ -68,7 +68,7 @@
     <dependency>
       <groupId>org.oris-tool</groupId>
       <artifactId>sirio</artifactId>
-      <version>2.0.1-SNAPSHOT</version>
+      <version>2.0.3</version>
     </dependency>
     <dependency>
       <groupId>org.jfree</groupId>
@@ -76,9 +76,27 @@
       <version>1.5.2</version>
     </dependency>
     <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+
+    <!-- JAXB Implementation -->
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>3.0.0</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>org.tinyjee.jgraphx</groupId>
       <artifactId>jgraphx</artifactId>
       <version>3.4.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
