--- a/eulero/pom.xml
+++ b/eulero/pom.xml
@@ -65,11 +65,7 @@
       <artifactId>guava</artifactId>
       <version>30.1-jre</version>
     </dependency>
-    <dependency>
-      <groupId>org.oris-tool</groupId>
-      <artifactId>sirio</artifactId>
-      <version>2.0.3</version>
-    </dependency>
+
     <dependency>
       <groupId>org.jfree</groupId>
       <artifactId>jfreechart</artifactId>
@@ -80,7 +76,6 @@
       <artifactId>jakarta.xml.bind-api</artifactId>
       <version>3.0.0</version>
     </dependency>
-
     <!-- JAXB Implementation -->
     <dependency>
       <groupId>com.sun.xml.bind</groupId>
@@ -108,6 +103,12 @@
           <artifactId>json-simple</artifactId>
           <version>1.1.1</version>
       </dependency>
+    <dependency>
+      <groupId>org.oris-tool</groupId>
+      <artifactId>sirio</artifactId>
+      <version>2.0.4-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
