--- a/eulero/pom.xml
+++ b/eulero/pom.xml
@@ -84,6 +84,11 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>com.github.sh0nk</groupId>
+      <artifactId>matplotlib4j</artifactId>
+      <version>0.5.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.tinyjee.jgraphx</groupId>
       <artifactId>jgraphx</artifactId>
       <version>3.4.1.3</version>
